--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,12 @@
 			<version>1.6</version>
 		</dependency>
 
+ 
+<dependency>
+    <groupId>org.reflections</groupId>
+    <artifactId>reflections</artifactId>
+    <version>0.9.11</version>
+</dependency>
 
 
 		<dependency>
