--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,14 @@
 	</properties>
 	<dependencies>
 
+ 
+    <dependency>
+	<groupId>com.fasterxml.jackson.core</groupId>
+	<artifactId>jackson-databind</artifactId>
+	<version>2.9.8</version>
+</dependency>
+
+
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context-support</artifactId>
